assets/styles/containers.css
.layout-container {
    width: 100%;
    padding: 0 1rem;
    margin: 0 auto;
}

@media screen and (min-width: 600px) {
    .layout-container {
        max-width: 540px;
    }
}

@media screen and (min-width: 782px) {
    .layout-container {
        max-width: 722px;
    }
}

@media screen and (min-width: 960px) {
    .layout-container {
        max-width: 900px;
    }
}

@media screen and (min-width: 1280px) {
    .layout-container {
        max-width: 1220px;
    }
}

@media screen and (min-width: 1440px) {
    .layout-container {
        max-width: 1380px;
    }
}

